@@ -1,4 +1,4 @@
-package uk.betacraft.legacyfix.patch.impl;
+package uk.betacraft.legacyfix.patch.impl.java;
 
 import javassist.CtClass;
 import javassist.CtMethod;
@@ -8,7 +8,6 @@ import uk.betacraft.legacyfix.patch.PatchException;
 import uk.betacraft.legacyfix.patch.PatchHelper;
 import uk.betacraft.legacyfix.util.JvmUtils;
 
-import java.lang.instrument.ClassDefinition;
 import java.lang.instrument.Instrumentation;
 
 /**
@@ -16,7 +15,7 @@ import java.lang.instrument.Instrumentation;
  */
 public class ModloaderPatch extends Patch {
     public ModloaderPatch() {
-        super("modloader", "Allows Risugami's ModLoader to work on Java 9 and higher", false);
+        super("modloader", "Allows Risugami's ModLoader to work on Java 9 and higher", true);
     }
 
     @Override
@@ -32,10 +31,11 @@ public class ModloaderPatch extends Patch {
                 args.contains("--add-opens=java.base/java.util=ALL-UNNAMED") &&
                 args.contains("--add-opens=java.desktop/java.awt=ALL-UNNAMED") &&
                 args.contains("--add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED") &&
+                args.contains("--add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED") &&
                 args.contains("-Djava.system.class.loader=uk.betacraft.legacyfix.patch.URLClassLoaderBridge")
             )) {
                 LFLogger.error(
-                    "The ModLoader patch couldn't be applied. Note that this fix requires legacyfix to be in the classpath along with specific JVM arguments:",
+                    "The ModLoader patch couldn't be applied.\nNote that this fix requires legacyfix to be in the classpath along with specific JVM arguments:",
                     "--add-opens=java.base/java.nio=ALL-UNNAMED " +
                     "--add-opens=java.base/java.net=ALL-UNNAMED " +
                     "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED " +
@@ -43,12 +43,13 @@ public class ModloaderPatch extends Patch {
                     "--add-opens=java.base/java.util=ALL-UNNAMED " +
                     "--add-opens=java.desktop/java.awt=ALL-UNNAMED " +
                     "--add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED " +
+                    "--add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED " +
                     "-Djava.system.class.loader=uk.betacraft.legacyfix.patch.URLClassLoaderBridge"
                 );
 
                 throw new PatchException("Conditions not met");
             }
-        } else if (!args.contains("-Djava.system.class.loader=uk.betacraft.legacyfix.fix.URLClassLoaderBridge")) {
+        } else if (!args.contains("-Djava.system.class.loader=uk.betacraft.legacyfix.patch.URLClassLoaderBridge")) {
             LFLogger.error(
                     "The ModLoader patch couldn't be applied. Note that this fix requires legacyfix to be in the classpath along with a JVM argument:",
                     "-Djava.system.class.loader=uk.betacraft.legacyfix.patch.URLClassLoaderBridge"
@@ -80,7 +81,7 @@ public class ModloaderPatch extends Patch {
             "}"
         );
 
-        inst.redefineClasses(new ClassDefinition(Class.forName(clazz.getName()), clazz.toBytecode()));
+        this.redefineClass(inst, clazz);
 
         clazz = pool.get("java.lang.ClassLoader");
         method = clazz.getDeclaredMethod("loadClass", new CtClass[] {PatchHelper.stringClass});
@@ -90,7 +91,7 @@ public class ModloaderPatch extends Patch {
             "}"
         );
 
-        inst.redefineClasses(new ClassDefinition(Class.forName(clazz.getName()), clazz.toBytecode()));
+        this.redefineClass(inst, clazz);
     }
 
     @Override
